--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -7,9 +7,7 @@
         <?php echo $this->headTitle()."\n";?>
 
         <!--CSS-->
-        <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="/css/bootstrap-responsive.min.css">
-        <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="/css/style.css">
 
         <!--FONT-->
         
@@ -18,6 +16,7 @@
         <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     </head>
     <body>
+
         <?php echo $this->layout()->content;?>
     </body>
 </html>
