--- a/public/css/less/sic/sic.less
+++ b/public/css/less/sic/sic.less
@@ -5,5 +5,11 @@
 // Mixins
 @import "mixins.less";
 
+// panels
+@import "panels.less"; 
+
+// form
+@import "form.less"; 
+
 // Inners, outers and spacers
 @import "utilities.less"; 
