--- a/public/css/style.less
+++ b/public/css/style.less
@@ -38,11 +38,24 @@ a {
 }
 
 #page {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
+    
 }
 
+.menu {
+    position: relative;
+}
+
+.menu-main {
+    height: 67px;
+    background: #660000 url(/img/css/logo.png) 30px 0 no-repeat;
+}
+
+.footer {
+  	padding: 10px 0;
+    background: #660000;
+    text-align: center;
+    color: #fff;
+}
 
 /********************************
  *          Responsive
