--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,7 +1,26 @@
+<div class="heading">
+    <div class="container">
+        <h1>Asset Management</h1>
+    </div>
+</div>
 
-<div class="container">
-    <div>
-        <h3>Administrador de Assets</h3>
-        <p>Pantalla de bienvenida</p>
+<div class="page">
+    <div class="container">
+        <div class="row-fluid">
+            <div class="span4 offset4">
+                <div class="panel panel-outer">
+                    <div class="panel-heading">
+                        <span>Iniciar Sesión</span>
+                    </div>
+                    <div class="panel-body">
+                        <form method="post" action="/signup" class="clearfix unstyled">
+                            <input type="text" class="input-block-level" placeholder="Nombre de usuario" name="Nombre de usuario">
+                            <input type="password"class="input-block-level" placeholder="Password" name="password">
+                            <input type="submit" class="btn btn-success pull-right" value="Login">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
