--- a/public/css/less/bootstrap/bootstrap.less
+++ b/public/css/less/bootstrap/bootstrap.less
@@ -10,7 +10,8 @@
 
 // Core variables and mixins
 @import "variables.less"; // Modify this for custom colors, font-sizes, etc
-@import "../sic/variables.less";
+@import "../sic/sic-variables.less";
+
 @import "mixins.less";
 
 // CSS Reset
