--- a/public/css/less/sic/sic-variables.less
+++ b/public/css/less/sic/sic-variables.less
@@ -54,8 +54,8 @@
 // @altFontFamily:         @serifFontFamily;
 
 // @headingsFontFamily:    inherit; // empty to use BS default, @baseFontFamily
-// @headingsFontWeight:    bold;    // instead of browser default, bold
-// @headingsColor:         inherit; // empty to use BS default, @textColor
+@headingsFontWeight:    200;    // instead of browser default, bold
+@headingsColor:         #333; // empty to use BS default, @textColor
 
 
 // // Component sizing
