--- a/public/css/less/sic/sic.less
+++ b/public/css/less/sic/sic.less
@@ -1,7 +1,4 @@
 
-// Variables
-@import "variables.less";
-
 // Mixins
 @import "mixins.less";
 
@@ -10,6 +7,9 @@
 
 // form
 @import "form.less"; 
+
+// box
+@import "box.less"; 
 
 // Inners, outers and spacers
 @import "utilities.less"; 
