--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -16,37 +16,57 @@
         <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div id="page" class="container">
-            <div class="header">
-                <div class="menu menu-main">
-                    
-                </div><!-- .menu -->
-            </div>
-            
-            <div class="row-fluid">
-                <div class="span4 offset4">
-                    <div class="panel">
-                        <div class="panel-heading">
-                            <span>Iniciar Sesión</span>
-                        </div>
-                        <div class="panel-body">
-                            <form method="post" action="/signup" class="clearfix unstyled">
-                                <input type="text" class="input-block-level" placeholder="Nombre de usuario" name="Nombre de usuario">
-                                <input type="password"class="input-block-level" placeholder="Password" name="password">
-                                <input type="submit" class="btn btn-success pull-right" value="Login">
-                            </form>
+        
+        <div class="header">
+            <div class="container">
+                <div class="row">
+                    <div class="span4">
+                        <a href="/"><img src="/img/logo.png" alt=""></a>
+                    </div>
+                    <div class="span4 offset4">
+                        <div class="profile-box">
+                            <span>Bienvenido terricola</span>    
                         </div>
                     </div>
                 </div>
             </div>
-
-            <div>
-                <?php echo $this->layout()->content;?>
-            </div>
-
-            <div class="footer">
-                Accenture, 2013.
+        </div>
+        
+        <!-- <div class="heading">
+            <div class="container">
+                <h1>Asset Management</h1>
             </div>
         </div>
+
+        <div class="page">
+            <div class="container">
+                <div class="row-fluid">
+                    <div class="span4 offset4">
+                        <div class="panel panel-outer">
+                            <div class="panel-heading">
+                                <span>Iniciar Sesión</span>
+                            </div>
+                            <div class="panel-body">
+                                <form method="post" action="/signup" class="clearfix unstyled">
+                                    <input type="text" class="input-block-level" placeholder="Nombre de usuario" name="Nombre de usuario">
+                                    <input type="password"class="input-block-level" placeholder="Password" name="password">
+                                    <input type="submit" class="btn btn-success pull-right" value="Login">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+
+        <div>
+            <?php echo $this->layout()->content;?>
+        </div>
+
+
+        <div class="footer">
+            Accenture, 2013.
+        </div>
+
     </body>
 </html>
