--- a/application/views/scripts/assets/agregar.phtml
+++ b/application/views/scripts/assets/agregar.phtml
@@ -1,11 +1,20 @@
-<div class="container">
-	<h2>Agregar producto</h2>
-	<p>A continuación se muestra el <span class="label">formulario para agregar un nuevo producto</span> al sistema.</p>
-	<hr>
+<div class="heading">
+	<div class="container">
+		<h2>Agregar producto</h2>
+	</div>
+</div>
+<div class="page">
+	<div class="container">
+		
+		<p>A continuación se muestra el <span class="label">formulario para agregar un nuevo producto</span> al sistema.
+		</p>
+		
+		<hr>
 
-	<div class="row">
-		<div class="span4 offset2">
-			<?php echo $this->table;?>
+		<div class="row">
+			<div class="span12">
+				<?php echo $this->table;?>
+			</div>
 		</div>
 	</div>
 </div>
