--- a/public/css/less/sic/form.less
+++ b/public/css/less/sic/form.less
@@ -1,6 +1,22 @@
 
 form {
-	&.unstyled {
-		margin-bottom: 0;
-	}
+    &.unstyled {
+        margin-bottom: 0;
+    }
+}
+
+.form-col {
+    width: 50%;
+    float: left;
+}
+
+@media (max-width: 767px) {
+    .form-col {
+        width: 100%;
+        float: none;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+
 }
