--- a/public/css/less/sic/panels.less
+++ b/public/css/less/sic/panels.less
@@ -6,6 +6,10 @@
     .box-shadow(0 1px 1px rgba(0,0,0,0.05));
 }
 
+.panel-outer {
+    margin: 20px 0;
+}
+
 .panel-heading {
     color: #333;
     background-color: #f5f5f5;
@@ -19,4 +23,5 @@
 
 .panel-body {
     padding: 15px;
+    background-color: #fff;
 }
