--- a/public/css/less/sic/utilities.less
+++ b/public/css/less/sic/utilities.less
@@ -3,13 +3,13 @@
 // --------------------------------------------------
 
 
-#sicBox > .spacers("inner", 50px, 5px);
-#sicBox > .spacers("inner-horizontal", 50px, 5px);
-#sicBox > .spacers("inner-vertical", 50px, 5px);
+// #sicBox > .spacers("inner", 50px, 5px);
+// #sicBox > .spacers("inner-horizontal", 50px, 5px);
+// #sicBox > .spacers("inner-vertical", 50px, 5px);
 
-#sicBox > .spacers("outer", 50px, 5px);
-#sicBox > .spacers("outer-horizontal", 50px, 5px);
-#sicBox > .spacers("outer-vertical", 50px, 5px);
+// #sicBox > .spacers("outer", 50px, 5px);
+// #sicBox > .spacers("outer-horizontal", 50px, 5px);
+// #sicBox > .spacers("outer-vertical", 50px, 5px);
 
-#sicBox > .spacers("spacer", 80px, 5px);
-#sicBox > .spacers("spacerh", 80px, 5px);
+// #sicBox > .spacers("spacer", 80px, 5px);
+// #sicBox > .spacers("spacerh", 80px, 5px);
