--- a/public/css/style.less
+++ b/public/css/style.less
@@ -30,31 +30,36 @@
  */
 
 html{
-  
+  background: #f5f5f5;
 }
-
+body {
+  background-color: transparent;
+}
 a {
     .transition(color 0.3s);
 }
 
-#page {
-    
+.page {
+    // .box-shadow(0 0 10px 0 rgba(0,0,0,.5));
+    background-color: #fff;
+    padding: 10px 0;
+}
+.header {
+  background: #660000;
+  min-height: 80px;
 }
 
-.menu {
-    position: relative;
-}
-
-.menu-main {
-    height: 67px;
-    background: #660000 url(/img/css/logo.png) 30px 0 no-repeat;
+.heading {
+  padding: 10px 0;
+  background: #f5f5f5;
+  border-bottom: 1px solid #cccccc;
 }
 
 .footer {
-  	padding: 10px 0;
-    background: #660000;
-    text-align: center;
-    color: #fff;
+  padding: 10px 0;
+  background: #f5f5f5;
+  border-top: 1px solid #cccccc;
+  text-align: center;  
 }
 
 /********************************
